--- a/my_doc/README.adoc
+++ b/my_doc/README.adoc
@@ -1,3 +1,8 @@
 = netty学习笔记
 
-link:my_doc/netty基础.md[netty基础]
+link:netty基础.md[netty基础]
+link:引导.md[引导]
+link:EventLoop和netty线程模型.md[EventLoop和netty线程模型]
+link:编解码器.md[编解码器]
+link:预置的ChannelHandler和编解码器.md[预置的ChannelHandler和编解码器]
+link:单元测试.md[单元测试]
