--- a/my_doc/README.adoc
+++ b/my_doc/README.adoc
@@ -6,3 +6,4 @@ link:EventLoop和netty线程模型.md[EventLoop和netty线程模型]
 link:编解码器.md[编解码器]
 link:预置的ChannelHandler和编解码器.md[预置的ChannelHandler和编解码器]
 link:单元测试.md[单元测试]
+link:时间轮.md[时间轮]
