--- a/my_doc/时间轮.adoc
+++ b/my_doc/时间轮.adoc
@@ -14,7 +14,7 @@ JDK提供了DelayQueue和ScheduledThreadPool等支持调度的工具类，和时
 
 netty中时间轮的实现类是HashedWheelTimer，其实现原理是，定义了一个大小固定的数组（默认大小512，构造函数可修改），数组的元素是一个双向链表，每个数组元素的双向链表保存了相同等待时间的任务（remainingRounds大于0的表示要等待remainingRounds圈）。创建HashedWheelTimer对象时还需要指定tickDuration属性，表示时间轮的精度，如果tickDuration为1秒，则HashedWheelTimer对象支持的调度最小时间就是1秒。
 
-每次调用HashedWheelTimer的newTimeout方法都会创建一个HashedWheelTimeout对象并保存到一个队列中，HashedWheelTimer构造函数在创建数组以后会创建一个worker进程，worker进程在无限循环中遍历数组，每隔tickDuration的时间遍历一个数组元素（通过Thread.sleep(sleepTimeMs)实现等待），在遍历数组元素之前会从队列中获取所有（默认只获取100000个，为了防止无限循环了）HashedWheelTimeout对象并根据其deadline时间将HashedWheelTimeout对象添加到其应该存在的数组元素中，遍历到某个数组元素后，会遍历数组元素的双向链表，逐个同步执行任务（如果remainingRounds大于0则只是remainingRounds - 1）。
+每次调用HashedWheelTimer的newTimeout方法都会创建一个HashedWheelTimeout对象并保存到一个队列中，HashedWheelTimer构造函数在创建数组以后会创建一个worker进程，worker进程在无限循环中遍历数组，每隔tickDuration的时间遍历一个数组元素（通过Thread.sleep(sleepTimeMs)实现等待），每次遍历一个数组元素之前会从队列中获取所有（默认只获取100000个，为了防止无限循环）HashedWheelTimeout对象并根据其deadline时间将HashedWheelTimeout对象添加到其应该存在的数组元素中，遍历到某个数组元素后，会遍历数组元素的双向链表，逐个同步执行任务（如果remainingRounds大于0则只是remainingRounds - 1）。
 
 HashedWheelTimer的实现本质上就是一个数组，数组元素是双向链表（方便增减元素），需要延迟执行的任务会被保存到某个双向链表中（根据延迟时间决定数组位置），worker线程循环遍历数组元素，同步执行到了执行时间的任务。
 
